--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,12 @@
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>
-        歡迎來到我的部落格
-    </title>
-</head>
-
-<body>
-    <h1> 歡迎來到我的部落格</h1>
-    <img src="https://www.wowtravelclub.com/wp-content/uploads/2019/03/Japan-banner.jpg" alt="Japan-banner">
-    <hr>
+{% extends 'base.html' %}
+{% block title %} 歡迎光臨我的部落格-首頁{% endblock %}
+{% block headmessage %}
+<h3 style='font-family:標楷體;'>本站文章列表
+    {% endblock %}
+    {% block content %}
     {% for post in posts %}
-    <p style='font-family: 微軟正黑體;font-size:16pt;font-weight:bold;'>
-        <a href='/post/{{post.slug}}'>{{post.title}}</a> {{post.pub_date}}
+    <p style=‘font-family:微軟正黑體;font-size:14pt;font-weight:bold;'>
+        <a href='/post/{{post.slug}}'>{{ post.title }}</a>
     </p>
     {% endfor %}
-    <hr>
-    <h3>現在時間:{{now}}</h3>
-</body>
-
-</html>
+    {% endblock %}
