--- a/templates/header.html
+++ b/templates/header.html
@@ -1,2 +1,7 @@
-<h1 style=“font-family:微軟正黑體;”>歡迎光臨我的部落格</h1>
-<img src="https://www.wowtravelclub.com/wp-content/uploads/2019/03/Japan-banner.jpg" alt="Japan-banner">
+{% load static %}
+<div class="text-center">
+    <h1 style=“font-family:微軟正黑體;”>歡迎光臨我的部落格</h1>
+</div>
+<div class="text-center">
+    <img src="{% static "images/Japan-banner.jpg" %}">
+</div>
