--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,20 @@
     {% endblock %}
     {% block content %}
     {% for post in posts %}
-    <p style=‘font-family:微軟正黑體;font-size:14pt;font-weight:bold;'>
-        <a href='/post/{{post.slug}}'>{{ post.title }}</a>
-    </p>
+    <div class='panel-heading'>
+        <p style=‘font-family:微軟正黑體;font-size:14pt;font-weight:bold;'>
+            <a href='/post/{{post.slug}}'>{{ post.title }}</a>
+        </p>
+    </div>
+    <div class='panel-body' style='background-color:#ffffdd'>
+        <p>
+        {{ post.body | truncatechars:20 }}
+        </p>
+    </div>
+    <div class='panel-footer' style='background-color:#efefef'>
+        <p>
+        發佈時間：{{ post.pub_date | date:"Y-m-d(D), h:i:s"}}
+        </p>
+    </div>
     {% endfor %}
     {% endblock %}
