--- a/templates/post.html
+++ b/templates/post.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <p style='font-family:微軟正黑體;font-size:12pt;letter-spacing:2pt;'>
-    {{ post.body }}
+    {{ post.body | safe |linebreaksbr}}
 </p>
 <a style='font-family:微軟正黑體;' href='/'>回首頁</a>
 {% endblock %}
