--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,7 @@
 {% load static %}
-<div class="text-center">
-    <h1 style=“font-family:微軟正黑體;”>歡迎光臨我的部落格</h1>
+<div class="text-center ">
+    <img height='70px' src="{% static "images/logo.png" %}">
+    <h1 style=“font-family:微軟正黑體;display:inline;”>歡迎光臨我的部落格</h1>
 </div>
 <div class="text-center">
     <img src="{% static "images/Japan-banner.jpg" %}">
