--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,7 @@
 {% block content %}
 <p style='font-family:微軟正黑體;font-size:12pt;letter-spacing:2pt;'>
     {{ post.body |markdown}}
+    <!-- 貼文內要新增HTML語法，所以需要使用markdown -->
 </p>
 <a style='font-family:微軟正黑體;' href='/'>回首頁</a>
 {% endblock %}
